# tensorflow_musa_extension

./: .gitignore  CMakeLists.txt  MUSA_KERNEL_TIMING  README.en.md  README.md  TIMING_DEBUG_RUNBOOK.md  TIMING_DEBUG_SUMMARY.md  TIMING_KERNEL_MASTER_GUIDE.md  TIMING_PENDING_CHANGES.md  build.sh  core_2026-02-28_06:24:13.927_worker33016_2876.mudmp  core_2026-02-28_06:32:52.121_worker33016_6265.mudmp  grep  run_current_only_validation.sh  setup.py  任务评分.xlsx
.claude/: settings.local.json
.github/workflows/: ci-notify.yml  pr-validation.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-29.jsonl  turns-2026-04-29.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
benchmark/: bench_alloc_churn.py  bench_h2d.py  bench_host_alloc.py  bench_resnet.py
build_aloysha/: CMakeCache.txt
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: CI.md  COMPATIBILITY.md  DEBUG_GUIDE.md  KERNEL_EXPANSION.md  PLUGGABLE_DEVICE_DEVELOPMENT_LOG.md  PLUGGABLE_DEVICE_DOCS.md  PLUGGABLE_DEVICE_MIGRATION_PLAN.md  PLUGGABLE_DEVICE_REVIEW_FINDINGS.md  environment-variables.md  tf-compat-matrix.md
includeCopy/: mudnn.h  mudnn_tensor.h
internal-docs/: DEBUG_GUIDE.md  README.md  architecture-and-memory.md  memory-optimization.md
musa_ext/graph/fusion/: adam_mixed_fusion.cc  adam_mixed_fusion.h  reshape_matmul_fusion.cc  tensordot_fusion.cc
musa_ext/kernels/: musa_ZerosLike_op.cc  musa_abs_op.cc  musa_addn_kernel.mu  musa_addn_op.cc  musa_arg_op.cc  musa_argmax_op.cc  musa_assign_kernel.mu  musa_assign_op.cc  musa_bitwise_and_kernel.mu  musa_bitwise_and_op.cc  musa_cast_functor.h  musa_cast_op.cc  musa_conv2d_op.cc  musa_diag_part_kernel.mu  musa_diag_part_op.cc  musa_einsum_op.cc  musa_einsum_op.h  musa_einsum_op_half.cc  musa_equal_op.cc  musa_erf_op.cc  musa_expand_dims_op.cc  musa_fill_functor.h  musa_fill_op.cc  musa_floor_div_op.cc  musa_fused_batchnorm_op.cc  musa_fused_matmul_op.cc  musa_gather_op.cc  musa_greater_op.cc  musa_invertpermutation_op.cc  musa_isnan_kernel.mu  musa_isnan_op.cc  musa_kernel_runtime.h  musa_less_equal_op.cc  musa_logging_ops.cc  musa_matmul_op.cc  musa_max_op.cc  musa_merge_op.cc  musa_minimum_op.cc  musa_multiply_op.cc  musa_neg_kernel.mu  (+40 more)
musa_ext/kernels/array/: musa_ZerosLike_op.cc  musa_broadcast_gradient_args_op.cc  musa_broadcast_to_op.cc  musa_concat_offset_op.cc  musa_concat_op.cc  musa_const_op.cc  musa_diag_part_kernel.mu  musa_diag_part_op.cc  musa_empty_tensor_list.cc  musa_expand_dims_op.cc  musa_fill_functor.h  musa_fill_kernel.mu  musa_fill_op.cc  musa_gather_nd_op.cc  musa_gather_op.cc  musa_identity_n_op.cc  musa_identity_op.cc  musa_invertpermutation_op.cc  musa_matrix_band_part_kernel.mu  musa_matrix_band_part_op.cc  musa_matrix_set_diag_kernel.mu  musa_matrix_set_diag_op.cc  musa_pack_kernel.mu  musa_pack_op.cc  musa_pad_op.cc  musa_pad_op.mu  musa_placeholder_op.cc  musa_range_op.cc  musa_reshape_op.cc  musa_resourcegather_op.cc  musa_reverse_v2_op.cc  musa_scatter_nd_op.cc  musa_shape_op.cc  musa_size_op.cc  musa_slice_op.cc  musa_sparse_slice_op.cc  musa_sparse_slice_op.h  musa_split_op.cc  musa_split_v_op.cc  musa_squeeze_op.cc  (+22 more)
musa_ext/mu/: device_register.cc  device_register.h  kernel_register.h  musa_plugin_env.h  musa_runtime_registry.cc  musa_runtime_registry.h  musa_se_plugin.cc  tf_compat.h
musa_ext/python/: _C.cpp
musa_ext/utils/: logging.h  musa_einsum_op_util.h  musa_guarded_philox_random.h  musa_tensor_list_utils.cc  musa_tensor_list_utils.h
python/: __init__.py  _ext.py  _loader.py  _optimizers.py  device.py  generated_ops.py  gradients.py  memory.py  op_manifest.py  ops.py  snapshot.py
test/: assign_op_test  bitwise_and_op_test.py  broadcast_to_op_test.py  conv2d_op_test.py  core_2026-04-01_17:35:52.718_dev_688767.mudmp  core_2026-04-01_17:44:20.036_dev_701408.mudmp  diagpart_op_test.py  einsum_op_test.py  expand_dims_op_test.py  isnan_op_test.py  logging_op_test.py  max_op_test.py  musa_test_utils copy.py  musa_test_utils.py  pad_op_test.py  pow_op_test.py  random_standard_normal_op_test.py  range_op_test.py  relu_op_test copy.py  round_op_test.py  run_logical_binary_tests.sh  size_op_test.py  softmax_op_test.py  softplus_op_test.py  sparse_xent_op_test.py  sqrt_grad_op_test.py  test_SquaredDifference.py  test_abs.py  test_apply_resource.py  test_applyadam.py  test_argmax.py  test_bench_alloc_churn.py  test_biasadd_grad.py  test_broadcast_gradient_args.py  test_broadcast_to.py  test_cast.py  test_cast_BF16.py  test_concat_offset.py  test_device_caching_allocator.py  test_div_no_nan.py  (+59 more)
test/fusion/: concat_matmul_fusion_test.py  concat_matmul_split_fusion_test.py  elementwise_chain_fusion_test.py  fused_batchnorm_test.py  fuselayernormv2_fusion_test.py  layernorm_fusion_test.py  linear_leakyrelu_fusion_test.py  linear_relu_fusion_test.py  matmul_bias_fusion_test.py  matmul_biasadd_fusion_test.py  rgprojection_fusion_test.py  safe_clip_fusion_test.py  shifted_affine_map_fusion_test.py  sigmoid_calibration_fusion_test.py  two_layer_fused_matmul_fusion_test.py
test/ops/: SquaredDifference_op_test.py  abs_op_benchmark.py  abs_op_test.py  add_op_test.py  addn_op_test.py  apply_adagrad_op_test.py  apply_adamax_op_test.py  apply_resource_op_test.py  apply_rmsprop_op_test.py  argmax_op_test.py  assert_op_test.py  assign_add_op_test.py  broadcast_to_op_test.py  cast_op_test.py  conv2d_op_test.py  dropout_op_test.py  floor_mod_op_test.py  fused_batchnorm_op_test.py  gelu_op_test.py  interact_op_test.py  intopkv2_benchmark.py  isnan_op_test.py  layernorm_op_test.py  leakyrelu_grad_op_test.py  less_equal_op_test.py  less_op_test.py  log_op_test.py  logicaland_op_test.py  matmul_benchmark.py  matmul_op_test.py  matrix_band_part_op_test.py  maximum_op_test.py  mean_op_test.py  multiply_op_test.py  musa_one_trans3d_einsum_test.py  neg_op_test.py  pack_op_test.py  pln_cascade_block_benchmark.py  pluggable_se_api_test.py  pluggable_se_eager_add_test.py  (+38 more)
tools/: generate_python_ops.py
(+273 files in other folders)
